deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: todo-backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/praveenuppar/todo-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '500m'
              memory: '256Mi'
          readinessProbe:
            httpGet:
              path: /health/database
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 100
          livenessProbe:
            httpGet:
              path: /health/database
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 100
