service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: todo-backend
spec:
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
